# mechanopharm-minimal

./: .gitignore  CITATION.cff  CODE_AVAILABILITY.txt  LICENSE  README.md  RELEASE_CHECKLIST.txt  demo_minimal.py  fingerprints.py  manuscript_code_availability.txt  models.py  pyproject.toml  reproduce_figures.ipynb  summary.txt  test_examples_exist.py
examples/: demo_minimal.py
mechanopharm_minimal/: __init__.py  fingerprints.py  models.py  plotting.py
notebooks/: figures.ipynb  reproduce_figures.ipynb
outputs/: synthetic_endpoint.csv  synthetic_timecourse.csv
tests/: test_probabilities.py  test_smoke.py
