[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mechanopharm-minimal"
version = "0.1.0"
description = "Minimal reference implementation for mechanopharmacology state-dynamics models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Shoma Asaka"}
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pandas>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mechanopharm_minimal*"]
